<?xml version="1.0"?>
<package format="2">
  <name>raspi_ros</name>
  <version>0.1.0</version>
  <description>The raspi_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <author email="timotej.gaspar@ijs.si">Timotej Gaspar</author>
  <maintainer email="timotej.gaspar@ijs.si">Timotej Gaspar</maintainer>
  <maintainer email="rok.pahic@ijs.si">Rok Pahic</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>-->


  <build_depend>digital_interfaces_msgs</build_depend>-->
   <depend>digital_interfaces_msgs</depend>
  <!-- <run_depend>message_runtime</run_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>